# bds-cryo-et

./: .gitignore  README.md  pyproject.toml
data/: README.md
src/: binomial_split.py
