[project]
name = "bds-cryo-et"
version = "0.1.0"
description = "Pretraining and fine-tuning of deep learning models on Cryo-ET data using binomial data splitting augmentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pytest>=8.3.5",
    "scipy>=1.15.3",
    "torch>=2.7.0",
]
